# ndbrain

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json  tsconfig.json
apps/server/src/: config.test.ts  config.ts  main.ts  shutdown.test.ts  shutdown.ts  smoke.test.ts
apps/server/src/audit/: log.ts
apps/server/src/collab/: auth.test.ts  auth.ts  awareness.test.ts  awareness.ts  document-manager.test.ts  document-manager.ts  serialize.test.ts  serialize.ts  server.test.ts  server.ts
apps/server/src/db/: database.test.ts  database.ts
apps/server/src/embed/: chunk.test.ts  chunk.ts  config.test.ts  config.ts  indexer.test.ts  indexer.ts  provider.test.ts  provider.ts  store.test.ts  store.ts
apps/server/src/http/: auth.test.ts  auth.ts  cors.test.ts  routes.test.ts  routes.ts  server.test.ts  server.ts  session-cookie.test.ts  static.test.ts  static.ts
apps/server/src/index/: context.test.ts  context.ts  graph.test.ts  graph.ts  indexer.test.ts  indexer.ts  search.test.ts  search.ts
apps/server/src/keys/: cli.test.ts  cli.ts  scope.test.ts  scope.ts  service.test.ts  service.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.test.tsx  App.tsx  index.css
(+148 files in other folders)
