[package]
name = "ndbrain-desktop"
version = "0.1.0"
description = "ndBrain desktop shell (Tauri v2) loading the web UI"
authors = ["Julian Bachmann"]
license = ""
repository = "https://github.com/jubacCH/ndbrain"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ndbrain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-log = { version = "=2.8.0" }
tauri-plugin-fs = { version = "=2.5.1" }
tauri-plugin-dialog = { version = "=2.7.1" }
tauri-plugin-store = { version = "=2.4.3" }
